Rest Service with GET Method
- Get all projects
- Get project by Id
- Junit for Get all projects
- Junit for Get project By Id

--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -35,7 +35,12 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy</artifactId>
+      <artifactId>quarkus-resteasy-jsonb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
