Added config for external DB
- Run Postgres docker container with command
docker pull postgres
docker run --name postgresql -e POSTGRES_USER=user -e POSTGRES_PASSWORD=pass -p 5432:5432 -v ~/Work/decoded-bytes/db-data:/var/lib/postgresql/data -d postgres

--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-quarkus.datasource.db-kind=h2
-#quarkus.datasource.password=
-#quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
-#quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=user
+quarkus.datasource.password=pass
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 #quarkus.datasource.jdbc=false
 
 quarkus.hibernate-orm.database.generation=drop-and-create
