--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -2,7 +2,11 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=user
 quarkus.datasource.password=pass
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
-#quarkus.datasource.jdbc=false
+
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.username=username-default
+%test.quarkus.datasource.password=
+%test.quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
