Added a New property and added a default value

--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -7,6 +7,6 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 %test.quarkus.datasource.username=username-default
 %test.quarkus.datasource.password=
 %test.quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:default
+%test.quarkus.hibernate-orm.sql-load-script=import.sql
 
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.sql-load-script=import.sql
