Define same configuration and multiple levels
demonstrate config prioritization

--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 %test.quarkus.hibernate-orm.sql-load-script=import.sql
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+client.default.name=Decoded Bytes Application
