Adding environment specific properties to properties file

--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -12,3 +12,6 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 client.default.name=Decoded Bytes Application
+%staging.client.default.name=Decoded Bytes Staging Application
+%prod.client.default.name=Decoded Bytes Prod Application
+
