Setup k8s config on minikube
- setup postgres on minikube
- Add postgres user/password as secrets
- expose postgres as a service
- create simple configs as configmap
- change project-service to use configmaps and secrets

--- a/project-service/src/main/resources/application.properties
+++ b/project-service/src/main/resources/application.properties
@@ -12,7 +12,14 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 client.default.name=Decoded Bytes Application
-project-service.client-name=Decoded Bytes Project Service Config
+project-service-config.client-name=Decoded Bytes Project Service Config
 %staging.client.default.name=Decoded Bytes Staging Application
 %prod.client.default.name=Decoded Bytes Prod Application
 
+%prod.quarkus.kubernetes-config.enabled=true
+%prod.quarkus.kubernetes-config.config-maps=project-service-config
+%prod.quarkus.kubernetes-config.secrets.enabled=true
+%prod.quarkus.kubernetes-config.secrets=pg-credentials
+%prod.quarkus.datasource.username=${username}
+%prod.quarkus.datasource.password=${password}
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres.default:5432/postgres
