Added a new Budget Service to query project budget status

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ project-service.iml
 microservices-quarkus/.idea/
 
 microservices-quarkus/project-service/.mvn/
+
+microservices-quarkus/budget-service/.mvn/
