--- a/microservices-quarkus/project-service/src/main/resources/application.properties
+++ b/microservices-quarkus/project-service/src/main/resources/application.properties
@@ -25,4 +25,4 @@ project-service-config.client-name=Decoded Bytes Project Service Config
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres.default:5432/postgres
 
 
-%prod.budget-service/mp-rest/url=http://budget-service:8081/budgets
+%prod.budget-service/mp-rest/url=http://budget-service:80
