Added a Liveness Health check class

--- a/microservices-quarkus/project-service/src/main/resources/application.properties
+++ b/microservices-quarkus/project-service/src/main/resources/application.properties
@@ -26,3 +26,5 @@ project-service-config.client-name=Decoded Bytes Project Service Config
 
 
 %prod.budget-service/mp-rest/url=http://budget-service:80
+
+mp.health.disable-default-procedures=true
