--- a/microservices-quarkus/project-service/src/main/resources/application.properties
+++ b/microservices-quarkus/project-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+%dev.quarkus.http.port=9090
+
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=user
 quarkus.datasource.password=pass
@@ -25,6 +27,7 @@ project-service-config.client-name=Decoded Bytes Project Service Config
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgres.default:5432/postgres
 
 
-%prod.budget-service/mp-rest/url=http://budget-service:80
+%prod.budget-service/mp-rest/url=http://localhost:8080
 
+%dev.budget-service/mp-rest/url=http://localhost:8080
 mp.health.disable-default-procedures=true
